--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
-	<body onload='geoLocate()'>
+	<body onload="geoLocate()">
 		<div id="map"></div>
-		<script type="text/javascript" src='script.js'></script>
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr-rRZPA0jY7jMs0ZIwDEM6WpGGigkB-Y&callback=initMap"></script>
+		<script type="text/javascript" src="script.js"></script>
 		<!-- -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr-rRZPA0jY7jMs0ZIwDEM6WpGGigkB-Y&callback=initMap"></script>
 	</body>
 </html>
 
