--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body onload="geoLocate()">
+		<div class="header">
+			<nav>
+				<ul class="nav nav-pills pull-right">
+					<li role="presentation"><a href="" onclick="home()">Home</a></li>
+				</ul>
+				<h2>B&amp;W Dreamers</h2>
+			</nav>
+		</div>
+		<div class="container">
+			<div class="row">
+				
+			</div>
+		</div>
 		<div id="map"></div>
 		<script type="text/javascript" src="script.js"></script>
-		<!-- -->
+		<!-- Latest Jquery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
