added multiple markers

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 	<body onload="geoLocate()">
 		<div class="header">
 			<nav>
+				<div class="container">
 				<ul class="nav nav-pills pull-right">
 					<li role="presentation"><a href="" onclick="home()">Home</a></li>
 				</ul>
 				<h2>B&amp;W Dreamers</h2>
+				</div>
 			</nav>
 		</div>
 		<div class="container">
 			<div class="row">
-				
+
 			</div>
 		</div>
 		<div id="map"></div>
